Add pwa requirements (#1)
* Initial start of making app a PWA. Still need to add icons

* Add styling for garden sensor component

* Styling for panels and data font colors.

* Added icon sets and typography stylesheet

* slight tweak setting up the increase/decrease icon

--- a/gardenCenter/src/index.html
+++ b/gardenCenter/src/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <title>GardenCenter</title>
   <base href="/">
-
+  <meta name="theme-color" content="#03658C">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.json">
+  <!--<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <gc-root>Loading...</gc-root>
+  <gc-root>Growing...</gc-root>
 </body>
 </html>
